fix: pagination ma-with to prevent flickering at all

--- a/src/pagination.css
+++ b/src/pagination.css
@@ -5,8 +5,9 @@
   color: var(--color-neutral-100);
   background-color: var(--color-primary-600);
   vertical-align: middle;
-  padding: 0.375rem 0.75rem;
-  min-width: 1rem;
+  padding: 0.375rem 0.5rem;
+  min-width: 1.8rem;
+  max-width: 1.8rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.3;
